[rename] Tabular PDF

--- a/python_pdf_reader/read_tabular_pdf.ipynb
+++ b/python_pdf_reader/read_tabular_pdf.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from os.path import abspath, join, dirname\n",
+    "from os.path import join\n",
     "import re\n",
     "import json\n",
     "\n",
@@ -61,7 +61,7 @@
    "source": [
     "class PATH:\n",
     "    root = '/project'\n",
-    "    data = join(root, 'data')\n",
+    "    data = join(root, 'data', 'tabular_pdf')\n",
     "    \n",
     "    family        = join(data, \"familyxx\", \"familyxx\")\n",
     "    household     = join(data, \"househld\", \"househld\")\n",
